--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
     <title>Cake Class</title>
     <link rel="stylesheet" href="index.css" />
   </head>
@@ -22,7 +23,7 @@
         <li>🍓</li>
         <li>🍔</li>
         <li>🥛</li>
-        <li class="scared">🥚</li>
+        <li class="excited">🥚</li>
         <li>🍣</li>
         <li>🍗</li>
         <li>🧈</li>
